--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.4.5",
     "react-pdf": "^7.5.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.16.0",
